fixes overlapping issue with modal

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
 .modal {
 	display: none;
 	position: fixed;
-	z-index: 1;
+	z-index: 2;
 	left: 0;
 	top: 0;
 	width: 100%;
@@ -411,9 +411,9 @@ body {
 }
 
 /* CALENDAR CSS */
-.calendar {
+.calendar-wrapper {
 	/* position: relative; */
-	max-width: 512px; /*change as per your design need */
+	max-width: 384px; /*change as per your design need */
 	min-width: 384px;
 	background-color: var(--white);
 	color: var(--calendar-font-color);
@@ -431,7 +431,7 @@ body {
 	box-shadow: var(--shadow-5);
 }
 
-.calendar-inner {
+/* .calendar-inner {
 	padding: 12px 12px;
 }
 
@@ -562,4 +562,88 @@ body {
 .calendar .calendar-inner .calendar-body .next-dates:hover {
 	border: 1px solid transparent;
 	pointer-events: none;
+} */
+
+.calendar-wrapper header {
+	display: flex;
+	align-items: center;
+	padding: 20px 32px 0px 32px;
+	justify-content: space-between;
+	/* margin: 0 20px; */
+}
+header .icons {
+	display: flex;
+}
+header .icons span {
+	height: 38px;
+	width: 38px;
+	margin: 0 1px;
+	cursor: pointer;
+	color: #878787;
+	text-align: center;
+	line-height: 38px;
+	font-size: 1.9rem;
+	user-select: none;
+	border-radius: 50%;
+}
+.icons span:last-child {
+	margin-right: -10px;
+}
+header .icons span:hover {
+	background: #f2f2f2;
+}
+header .current-date {
+	font-size: 1.5rem;
+	font-weight: 500;
+}
+.calendar {
+	padding: 20px;
+}
+.calendar ul {
+	display: flex;
+	flex-wrap: wrap;
+	list-style: none;
+	text-align: center;
+	padding: 0;
+}
+.calendar .days {
+	margin-bottom: 20px;
+}
+.calendar li {
+	color: #333;
+	width: calc(100% / 7);
+	font-size: 1.07rem;
+}
+.calendar .weeks li {
+	font-weight: 500;
+	cursor: default;
+}
+.calendar .days li {
+	z-index: 1;
+	cursor: pointer;
+	position: relative;
+	margin-top: 30px;
+}
+.days li.inactive {
+	color: #aaa;
+}
+.days li.active {
+	color: #fff;
+}
+.days li::before {
+	position: absolute;
+	content: '';
+	left: 50%;
+	top: 50%;
+	height: 40px;
+	width: 40px;
+	z-index: -1;
+	border-radius: 50%;
+	transform: translate(-50%, -50%);
+}
+.days li.active::before {
+	background: var(--purple);
+}
+.days li:not(.active):hover::before {
+	background: #f2f2f2;
 }
